--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,9 +1,9 @@
 name: 🛒 Scrape & Upload Products from Alibaba
 
 on:
-  workflow_dispatch:  # يمكن تشغيله يدويًا
+  workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *'  # تشغيل يومي 3 صباحًا (UTC)
+    - cron: '0 3 * * *'  # يوميًا 3 صباحًا UTC
 
 jobs:
   run-pipeline:
@@ -24,7 +24,26 @@ jobs:
           pip install -r requirements.txt
 
       - name: 🚀 Run Pipeline
+        id: pipeline
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-        run: python run_pipeline.py
+        run: |
+          python run_pipeline.py
+        continue-on-error: true  # لو خرج بكود 99 نكمل الخطوات التالية
+
+      - name: 📝 Commit Progress (Uploaded & Progress Files)
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add uploaded_products.json last_processed.txt
+          git diff --cached --quiet || git commit -m "🔄 Auto update uploaded state"
+          git push
+
+      - name: 🔁 Restart Workflow If Not Finished
+        if: steps.pipeline.outcome == 'failure' && steps.pipeline.conclusion == 'failure'
+        run: |
+          echo "🔁 Re-dispatching workflow due to remaining products..."
+          gh workflow run "${{ github.workflow }}" --ref "${{ github.ref }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
